--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
         <h1>Crystals Collector!</h1>
     </heading>
 
+    <div class="row">
+        <div class="col-md-3">
+            <container id="randomNumberField">
+                <h2 id=showRandomNumber>15</h2>
+            </container>
+        </div>
+
+        <div class="col-md-6"></div>
+        <div class="col"></div>
+    </div>
+
 
 
 
