--- a/index.html
+++ b/index.html
@@ -19,12 +19,32 @@
 
     <div class="row">
         <div class="col-md-3">
-            <container id="randomNumberField">
-                <h2 id=showRandomNumber>15</h2>
-            </container>
+            <div id="randomNumberField">
+                <h3>Match this number:</h3>
+                <h2 class="bigNumbers" id=showRandomNumber>15</h2>
+            </div>
         </div>
 
-        <div class="col-md-6"></div>
+        <div class="col-md-6">
+            <div class="row" id="scoreCard">
+                <div class="col-md-6">
+                    <h3>Wins:</h3>
+                    <h2 id="wins">1</h2>
+                </div>
+                <div class="col-md-6">
+                    <h3>Losses:</h3>
+                    <h2 id="losses">1</h2>
+                </div>
+            </div>
+            <div class="row" id="crystalMenu">
+                <h3>Choose your crystals:</h3>
+                <div class="col-md-3"></div>
+                <div class="col-md-3"></div>
+                <div class="col-md-3"></div>
+                <div class="col-md-3"></div>
+            </div>
+            <div class="row"></div>
+        </div>
         <div class="col"></div>
     </div>
 
