--- a/index.html
+++ b/index.html
@@ -37,11 +37,19 @@
                 </div>
             </div>
             <div class="row" id="crystalMenu">
-                <h3>Choose your crystals:</h3>
-                <div class="col-md-3"></div>
-                <div class="col-md-3"></div>
-                <div class="col-md-3"></div>
-                <div class="col-md-3"></div>
+                <div class="row">
+                    <h3>Choose your crystals beeotch:</h3>
+                </div>
+                
+                <div class="row">
+                    <div class="col-md-3"><input type="image" class="crystalButton" id="blueCrystal" src="assets/images/skullCrystal1A.jpg" alt="Blue Crystal"></div>
+                    
+                    <div class="col-md-3">
+                        <input type="image" class="crystalButton" id="blueCrystal" src="assets/images/PurpleCrytal.jpg" alt="Purple Crystal">
+                    </div>
+                    <div class="col-md-3"></div>
+                    <div class="col-md-3"></div>
+                </div>
             </div>
             <div class="row"></div>
         </div>
