added all crystal images, layed them out, and made them into input objects.

--- a/index.html
+++ b/index.html
@@ -38,19 +38,46 @@
             </div>
             <div class="row" id="crystalMenu">
                 <div class="row">
-                    <h3>Choose your crystals beeotch:</h3>
-                </div>
-                
-                <div class="row">
-                    <div class="col-md-3"><input type="image" class="crystalButton" id="blueCrystal" src="assets/images/skullCrystal1A.jpg" alt="Blue Crystal"></div>
-                    
-                    <div class="col-md-3">
-                        <input type="image" class="crystalButton" id="blueCrystal" src="assets/images/PurpleCrytal.jpg" alt="Purple Crystal">
+                    <h3>Choose your crystals:</h3>
+                </div>               
+            </div>
+
+            <!-- images as buttons -->
+            <div class="row" id="crystalMenu">
+                <div class="col-md-3">
+                    <div class="tumbnail">
+                        <div class="img-wrapper">
+                            <input type="image" class="crystalButton" id="blueCrystal" src="assets/images/skullCrystal1b.jpg" alt="Blue Crystal">
+                        </div>
                     </div>
-                    <div class="col-md-3"></div>
-                    <div class="col-md-3"></div>
+                </div>
+
+
+                <div class="col-md-3">
+                    <div class="thumbnail">
+                        <div class="img-wrapper">
+                            <input type="image" class="crystalButton" id="blueCrystal" src="assets/images/PurpleCrystal2b.jpg" alt="Purple Crystal">
+                        </div>
+                    </div>                
+                </div>
+
+                <div class="col-md-3">
+                    <div class="thumbnail">
+                        <div class="img-wrapper">
+                            <input type="image" class="crystalButton" id="rainbowCrystal" src="assets/images/SkullCrystal2b.jpg" alt="Rainbow Crystal">
+                        </div>
+                    </div>                    
+                </div>
+
+                <div class="col-md-3">
+                    <div class="thumbnail">
+                        <div class="img-wrapper">
+                            <input type="image" class="crystalButton" id="clearCrystal" src="assets/images/SkullCrystal3b.jpg" alt="Clear Crystal">
+                        </div>
+                    </div>
                 </div>
             </div>
+
             <div class="row"></div>
         </div>
         <div class="col"></div>
