minor bug fixing to css and some psuedocode.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="row" id="crystalMenu">
                 <div class="row">
                     <h3>Choose your crystals:</h3>
-                </div>               
+                </div>
             </div>
 
             <!-- images as buttons -->
@@ -56,9 +56,9 @@
                 <div class="col-md-3">
                     <div class="thumbnail">
                         <div class="img-wrapper">
-                            <input type="image" class="crystalButton" id="blueCrystal" src="assets/images/PurpleCrystal2b.jpg" alt="Purple Crystal">
+                            <input type="image" class="crystalButton" id="purpleCrystal" src="assets/images/PurpleCrystal2b.jpg" alt="Purple Crystal">
                         </div>
-                    </div>                
+                    </div>
                 </div>
 
                 <div class="col-md-3">
@@ -66,7 +66,7 @@
                         <div class="img-wrapper">
                             <input type="image" class="crystalButton" id="rainbowCrystal" src="assets/images/SkullCrystal2b.jpg" alt="Rainbow Crystal">
                         </div>
-                    </div>                    
+                    </div>
                 </div>
 
                 <div class="col-md-3">
@@ -82,23 +82,26 @@
             <div class="row">
                 <div class="accordion" id="accordionExample">
                     <div class="card">
-                      <div class="card-header" id="headingOne">
-                        <h2 class="mb-0">
-                          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <div class="card-header" id="headingOne">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                             Collapsible Group Item #1
                           </button>
-                        </h2>
-                      </div>
-                  
-                      <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-                        <div class="card-body">
-                          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                            </h2>
                         </div>
-                      </div>
-                    </div>
-            </div>
-        </div>
 
+                        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                            <div class="card-body">
+                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird
+                                on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft
+                                beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
         <div class="col-md-3">
             <div id="userNumberField">
                 <h3>Your Total So Far:</h3>
