wired first button, stored user's number, and changed it with the button click.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="col-md-3">
             <div id="userNumberField">
                 <h3>Your Total So Far:</h3>
-                <h2 class="bigNumbers" id=showRandomNumber>15</h2>
+                <h2 class="bigNumbers" id=showUserNumber>15</h2>
             </div>
         </div>
 
