tried to get the function for win conditions to work.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="col-md-3">
             <div id="randomNumberField">
                 <h3>Match this number:</h3>
-                <h2 class="bigNumbers" id=showRandomNumber>15</h2>
+                <h2 class="bigNumbers" id=showRandomNumber>Beep</h2>
             </div>
         </div>
 
@@ -105,7 +105,7 @@
         <div class="col-md-3">
             <div id="userNumberField">
                 <h3>Your Total So Far:</h3>
-                <h2 class="bigNumbers" id=showUserNumber>15</h2>
+                <h2 class="bigNumbers" id=showUserNumber>B00p</h2>
             </div>
         </div>
 
@@ -114,8 +114,10 @@
 
 
 
+    <!-- //original and best script: -->
+    <!-- <script src="assets/javascript/game.js"></script> -->
 
-    <script src="assets/javascript/game.js"></script>
+    <script src="assets/javascript/game2.js"></script>
 </body>
 
 </html>
