added instructions and refined the clarity of the text in the interface.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="row">
         <div class="col-md-3">
             <div id="randomNumberField">
-                <h3>Match this number:</h3>
+                <h3>Match This Number:</h3>
                 <h2 class="bigNumbers" id=showRandomNumber>Beep</h2>
             </div>
         </div>
@@ -38,7 +38,7 @@
             </div>
             <div class="row" id="crystalMenu">
                 <div class="row">
-                    <h3>Choose your crystals:</h3>
+                    <h3>Choose Your Crystals:</h3>
                 </div>
             </div>
 
@@ -85,16 +85,18 @@
                         <div class="card-header" id="headingOne">
                             <h2 class="mb-0">
                                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            Collapsible Group Item #1
+                            Instructions:
                           </button>
                             </h2>
                         </div>
 
                         <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                             <div class="card-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird
-                                on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft
-                                beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                               <p>A random number will be generated and displayed in the "Match This Number" field at the start of the game.</p>
+                               <p>See the four crystals?  By clicking on one of the them you can add a specific amount of points to your total score, shown in the "Your Total Score" field.  </p>
+                               <p>Each crystal has its own value randomly generated each round.  The value each crystal remains hidden until you click on it.</p>
+                               <p>If you can match the random number exactly by adding to your score with the crystals, you win!</p>
+                               <p>If you excced the random number you lose.</p>
                             </div>
                         </div>
                     </div>
@@ -104,7 +106,7 @@
         </div>
         <div class="col-md-3">
             <div id="userNumberField">
-                <h3>Your Total So Far:</h3>
+                <h3>Your Total Score:</h3>
                 <h2 class="bigNumbers" id=showUserNumber>B00p</h2>
             </div>
         </div>
