--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <!-- //original and best script: -->
     <!-- <script src="assets/javascript/game.js"></script> -->
 
-    <script src="assets/javascript/game3.js"></script>
+    <script src="assets/javascript/game.js"></script>
 </body>
 
 </html>
