Fixed some styling issues.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <h2 id="losses">1</h2>
                 </div>
             </div>
-            <div class="row" id="crystalMenu">
+            <div class="row" id="crystalMenuPrompt">
                 <div class="row">
                     <h3>Choose Your Crystals:</h3>
                 </div>
